test workfow fix

--- a/.github/workflows/general.yaml
+++ b/.github/workflows/general.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: install sqlx-cli
         run: cargo install sqlx-cli
           --version=${{env.SQLX_VERSION}}
-          --features ${{env.SQLX_FEATURES}}
+          --features=${{env.SQLX_FEATURES}}
           --no-default-features
           --locked
       - name: install postgres-client
@@ -104,7 +104,7 @@ jobs:
       - name: install rust toolchain
         uses: dtolnay/rust-toolchain@stable
       - name: install postgres-client
-        run: sudo apt-get update && suo apt-get install postgresql-client -y
+        run: sudo apt-get update && sudo apt-get install postgresql-client -y
       - name: rust cache action
         uses: Swatinem/rust-cache@v2
         with:
