--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ name = "zero2prod"
 [dependencies]
 actix-web = "4"
 config = "0.13"
+env_logger="0.9"
+log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 uuid = { version = "1", features = ["v4"]}
